--- a/jp4.html
+++ b/jp4.html
@@ -57,5 +57,5 @@
 <script src="https://code.jquery.com/jquery-2.1.4.js"> </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"> </script>
 <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
-<script src="js/main.js"> </script>
+<script src="js/jp4.js"> </script>
 </html>
