--- a/jp6.html
+++ b/jp6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Atlas Data Viewer</title>
+<title>Atlas Data Viewer: JP/IPv6</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css" />
 <link rel="stylesheet" href="css/main.css" />
 </head>
